--- a/src/Components/ImageGenerator/ImageGenerator.css
+++ b/src/Components/ImageGenerator/ImageGenerator.css
@@ -6,6 +6,7 @@
     margin-top: 80px;
     margin-bottom: 20px;
     gap: 30px;
+    border-radius: 30px;
 }
 
 .header{
@@ -22,6 +23,7 @@
 .image-loading{
     display: flex;
     flex-direction: column;
+    border-radius: 30px;
 }
 
 .image-loading img{
@@ -75,6 +77,10 @@
     padding: 0 20px; /* Add padding to the sides */
     transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Add transition for background color and box-shadow */
 }
+.generator-btn:hover {
+    background-color: #a3d410; /* Darker background color on hover */
+}
+
 
 .generator-btn.clicked {
     background-color: #34992c; /* Change background color when clicked */
